--- a/public/errors/geo.html
+++ b/public/errors/geo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>One Time Secret - Error</title>
+  <title>Onetime Secret - Error</title>
   <style>
     /* Define theme variables based on Tailwind config */
     :root {
@@ -323,7 +323,7 @@
       <div class="animated-border"></div>
 
       <div class="header">
-        <h1 class="brand-text" style="font-size: 2rem; margin-bottom: 1rem;">One Time Secret</h1>
+        <h1 class="brand-text" style="font-size: 2rem; margin-bottom: 1rem;">Onetime Secret</h1>
       </div>
 
       <!-- Choose ONE of these blocks based on error type -->
@@ -377,11 +377,11 @@
         <p><strong>Ray ID:</strong> ::RAY_ID::</p>
       </div>
 
-      <a href="/" class="action-button">Return to Homepage</a>
+      <a href="https://onetimesecret.com/" class="action-button">Return to Homepage</a>
     </div>
 
     <div class="footer">
-      <p>&copy; 2025 One Time Secret. All rights reserved.</p>
+      <p>&copy; 2025 Onetime Secret. All rights reserved.</p>
     </div>
   </div>
 
