--- a/public/errors/1xxx.html
+++ b/public/errors/1xxx.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>One Time Secret - Error</title>
+  <title>Onetime Secret - Error</title>
   <style>
     /* Define theme variables based on Tailwind config */
     :root {
@@ -323,7 +323,7 @@
       <div class="animated-border"></div>
 
       <div class="header">
-        <h1 class="brand-text" style="font-size: 2rem; margin-bottom: 1rem;">One Time Secret</h1>
+        <h1 class="brand-text" style="font-size: 2rem; margin-bottom: 1rem;">Onetime Secret</h1>
       </div>
 
       <!-- Choose ONE of these blocks based on error type -->
@@ -363,23 +363,25 @@
       </div> -->
 
       <!-- 1XXX Errors -->
-      <!-- <div>
+      <div>
         <div class="error-code">1001</div>
         <h2 class="error-title">Connection Error</h2>
         <p class="error-description">There was a problem connecting to the website.</p>
-        ::CLOUDFLARE_ERROR_1000S_BOX::
-      </div> -->
+        <br>
+        <p>::CLOUDFLARE_ERROR_1000S_BOX::</p>
+        <br><br>
+      </div>
 
       <div class="diagnostic-info">
         <p><strong>Client IP:</strong> ::CLIENT_IP::</p>
         <p><strong>Ray ID:</strong> ::RAY_ID::</p>
       </div>
 
-      <a href="/" class="action-button">Return to Homepage</a>
+      <a href="https://onetimesecret.com/" class="action-button">Return to Homepage</a>
     </div>
 
     <div class="footer">
-      <p>&copy; 2025 One Time Secret. All rights reserved.</p>
+      <p>&copy; 2025 Onetime Secret. All rights reserved.</p>
     </div>
   </div>
 
