--- a/public/errors/attack.html
+++ b/public/errors/attack.html
@@ -315,6 +315,10 @@
     .dark .captcha-container {
       background-color: var(--gray-800);
     }
+
+    .cloudflare-error-content {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -352,7 +356,7 @@
         <h2 class="error-title">Security Check</h2>
         <!--<p class="error-description">Please wait while we verify your browser.</p>-->
         <br><br>
-        <p>::IM_UNDER_ATTACK_BOX::</p>
+        <div class="cloudflare-error-content">>::IM_UNDER_ATTACK_BOX::</div>
         <br><br>
       </div>
 
