--- a/public/errors/captcha.html
+++ b/public/errors/captcha.html
@@ -315,6 +315,10 @@
     .dark .captcha-container {
       background-color: var(--gray-800);
     }
+
+    .cloudflare-error-content {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -338,7 +342,7 @@
 
       <!-- Interactive Challenge -->
       <div>
-        <div class="error-code">429</div>
+        <div class="error-code">402</div>
         <!--<h2 class="error-title">Verification Required</h2>-->
         <p class="error-description">Please complete the security check to continue.</p>
         <br><br>
