--- a/public/errors/index.html
+++ b/public/errors/index.html
@@ -315,6 +315,10 @@
     .dark .captcha-container {
       background-color: var(--gray-800);
     }
+
+    .cloudflare-error-content {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
