--- a/public/errors/1xxx.html
+++ b/public/errors/1xxx.html
@@ -315,6 +315,10 @@
     .dark .captcha-container {
       background-color: var(--gray-800);
     }
+
+    .cloudflare-error-content {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -368,7 +372,7 @@
         <h2 class="error-title">Connection Error</h2>
         <p class="error-description">There was a problem connecting to the website.</p>
         <br>
-        <p>::CLOUDFLARE_ERROR_1000S_BOX::</p>
+        <div class="cloudflare-error-content">::CLOUDFLARE_ERROR_1000S_BOX::</div>
         <br><br>
       </div>
 
