--- a/public/errors/geo.html
+++ b/public/errors/geo.html
@@ -315,6 +315,11 @@
     .dark .captcha-container {
       background-color: var(--gray-800);
     }
+
+
+    .cloudflare-error-content {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -334,7 +339,7 @@
         <h2 class="error-title">Access Denied</h2>
         <br>
         <!--<p class="error-description">Sorry, your access to this resource has been restricted.</p>-->
-        <p>::GEO::</p>
+        <div class="cloudflare-error-content">::GEO::</div>
         <br><br>
       </div>
 
